--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "api-demo"
+name = "python_flask_demo"
 version = "0.1.0"
 description = ""
 authors = ["Ganesh Chandrasekaran"]
@@ -7,6 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+flask = "^3.0.3"
+flask-restful = "^0.3.10"
+flask-httpauth = "^4.8.0"
+pyyaml = "^6.0.2"
+pyjwt = "^2.9.0"
+pymysql = "^1.1.1"
+flask-jwt-extended = "^4.6.0"
+pyarrow = "^17.0.0"
 
 
 [build-system]
