--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ pyyaml = "^6.0.2"
 pyjwt = "^2.9.0"
 pymysql = "^1.1.1"
 flask-jwt-extended = "^4.6.0"
-pyarrow = "^17.0.0"
+flask-restx = "^1.3.0"
+pyarrow = "^19.0.1"
 
 
 [build-system]
